rust_learn_sources = [
  cargo_sources,
  'main.rs',
  'lib.rs',
  'ihm.rs',
  'ihm/utilities.rs',
  'ihm/ihm_utilits.rs',
]

rust_learn_deps = [
]

cargo_script = find_program(join_paths(meson.project_source_root(), 'build-aux/cargo.sh'))
cargo_release = custom_target(
  'cargo-build',
  build_by_default: true,
  input: rust_learn_sources,
  output: meson.project_name(),
  console: true,
  install: true,
  install_dir: get_option('bindir'),
  command: [
    cargo_script,
    meson.project_build_root(),
    meson.project_source_root(),
    '@OUTPUT@',
    get_option('buildtype'),
    meson.project_name(),
  ]
)
